--- a/manifest.json
+++ b/manifest.json
@@ -70,6 +70,9 @@
     },
     "h5" : {
         "title" : "绿豆糕组件库",
-        "domain" : ""
+        "domain" : "",
+        "router" : {
+            "base" : "/ldcake-ui/"
+        }
     }
 }
