🪐 修改版本信息

--- a/itriton-ui/package.json
+++ b/itriton-ui/package.json
@@ -1,23 +1,24 @@
 {
-		"name": "ldcake-ui",
-		"version": "1.1.6",
+		"name": "@itriton/uniapp",
+		"version": "1.0.0",
 		"description": "基于uni-app的UI组件库",
 		"main": "index.js",
 		"scripts": {
 				"test": "echo \"Error: no test specified\" && exit 1"
 		},
 		"keywords": [
-				"ldcake",
-				"ldCake",
+				"@itriton/uniapp",
+				"@itriton",
+				"itriton-ui",
 				"uni-app",
 				"uni-app ui",
 				"uniapp",
-				"ldcakeui",
-				"ldcake ui",
-				"ldcakeUI",
-				"ldCakeui",
-				"ldCakeUI",
-				"ldCake UI",
+				"itritonui",
+				"itriton ui",
+				"itritonUI",
+				"itritonui",
+				"itritonUI",
+				"itriton UI",
 				"uni ui",
 				"uni UI",
 				"uniapp ui",
